dev(App): maj lien dsfr.css, ajout page 'not-found'

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,3 +1,4 @@
 <dsfr-header [beta]="true" [logoLink]="'/'" [logoTooltipMessage]="logoTooltipMessage" [serviceTitle]="serviceTitle"
-  [serviceTagline]="serviceTagline" [menu]="menuHeader" [headerToolsLinks]="headerToolsLinks" [searchBar]="false"
-  (searchSelect)="searchSelect($event)"></dsfr-header>
+  [serviceTagline]="serviceTagline" [operatorImagePath]="operatorImagePath" [menu]="menuHeader"
+  [headerToolsLinks]="headerToolsLinks" [searchBar]="false"></dsfr-header>
+  
