--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -8,10 +8,10 @@
       <p>
         Faciliter la visualisation des règlementations et enjeux applicables aux espaces forestiers
       </p>
-      <div class="buttons">
-        <dsfr-button label="Découvrir" variant="secondary" icon="fr-icon-checkbox-circle-line" iconPosition="left"></dsfr-button>
-        <dsfr-button label="Créer mon compte" icon="fr-icon-checkbox-circle-line" iconPosition="left"></dsfr-button>
-      </div>
+      <dsfr-buttons-group inline="always" iconPosition="left">
+        <dsfr-button label="Découvrir" variant="secondary" icon="fr-icon-info-fill" iconPosition="left"></dsfr-button>
+        <dsfr-button label="Créer mon compte" icon="fr-icon-arrow-right-fill" iconPosition="left"></dsfr-button>
+      </dsfr-buttons-group>
     </div>
     <div class="fr-col-12 fr-col-lg-6">
       <div class="img-box">
