--- a/src/app/components/foret-search-form/foret-search-form.component.html
+++ b/src/app/components/foret-search-form/foret-search-form.component.html
@@ -12,10 +12,13 @@
   <div class="fr-col-12 fr-col-lg-6">
     <div class="btn-group">
       <span>Ou</span>
-      <dsfr-button label="Charger une couche SIG" icon="fr-icon-checkbox-circle-line" iconPosition="right"
-        variant="secondary"></dsfr-button>
-      <dsfr-button label="Valider" icon="fr-icon-checkbox-circle-line" iconPosition="right"
-        variant="primary"></dsfr-button>
+      <div>
+        <label class="fr-label" for="load-file">Chargez une couche SIG</label>
+        <span class="fr-hint-text">Télécharger le périmètre au format QGIS.</span>
+        <dsfr-button id="load-file" label="Charger une couche SIG" icon="fr-icon-file-add-fill" iconPosition="right"
+          variant="secondary"></dsfr-button>
+      </div>
+      <dsfr-button label="Valider" variant="primary"></dsfr-button>
     </div>
   </div>
 </div>
