dev(HomeComponent): transfert de l'objet MapService.map a la page d'accueil, permet d'initialiser le formulaire de recherche

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -28,9 +28,9 @@
 
   <app-foret-search-form (search)="nextStep()"></app-foret-search-form>
 
-  <div *ngIf="step > 0" class="fr-grid-row fr-grid-row--gutters">
+  <div class="fr-grid-row fr-grid-row--gutters">
 
-    <div class="fr-col-12 fr-col-lg-6" [class.fr-col-lg-12]="step === 1">
+    <div class="fr-col-12 fr-col-lg-6" [class.fr-col-lg-12]="step === 1" [class.hidden]="step < 1">
       <app-map></app-map>
     </div>
 
