--- a/src/app/components/foret-search-form/foret-search-form.component.html
+++ b/src/app/components/foret-search-form/foret-search-form.component.html
@@ -1,12 +1,10 @@
 <div class="fr-grid-row">
   <div class="fr-col-12 fr-col-lg-6">
 
-    <form *ngIf="form" [formGroup]="form">
-      <dsfr-form-input formControlName="needle" [label]="'Saisissez une commune, un lieu-dit'"
-        [hint]="'Commune, lieu-dit, adresse, …'" [required]="false" [type]="'search'"
-        buttonLabel="Rechercher" (buttonSelect)="validNeedle()"></dsfr-form-input>
-    </form>
-
+    <div id="location">
+      <label class="fr-label">Saisissez une commune, un lieu-dit</label>
+      <span class="fr-hint-text">Commune, lieu-dit, adresse, ...</span>
+    </div>
 
   </div>
   <div class="fr-col-12 fr-col-lg-6">
