step 1 et step 2

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -26,11 +26,11 @@
 
   <app-foret-stepper [step]="step"></app-foret-stepper>
 
-  <app-foret-search-form (search)="nextStep()"></app-foret-search-form>
+  <app-foret-search-form (search)="nextStep()" [class.hidden]="step > 1"></app-foret-search-form>
 
   <div class="fr-grid-row fr-grid-row--gutters">
 
-    <div class="fr-col-12 fr-col-lg-6" [class.fr-col-lg-12]="step === 1" [class.hidden]="step < 1">
+    <div class="fr-col-12 fr-col-lg-6 map-container" [class.fr-col-lg-12]="step === 1" [class.hidden]="step < 1">
       <app-map></app-map>
     </div>
 
