--- a/src/app/components/map-info/map-info.component.html
+++ b/src/app/components/map-info/map-info.component.html
@@ -1,1 +1,2 @@
-<p>map-info works!</p>
+<p *ngIf="nbFeatures<2">Il y a {{nbFeatures}} feature sur la carte !</p>
+<p *ngIf="nbFeatures>1">Il y a {{nbFeatures}} features sur la carte !</p>
