--- a/src/app/components/foret-search-form/foret-search-form.component.html
+++ b/src/app/components/foret-search-form/foret-search-form.component.html
@@ -1,7 +1,7 @@
 <div class="fr-grid-row">
   <div class="fr-col-12 fr-col-lg-6">
 
-    <div id="location">
+    <div id="location" #searchControlGroup>
       <label class="fr-label">Saisissez une commune, un lieu-dit</label>
       <span class="fr-hint-text">Commune, lieu-dit, adresse, ...</span>
     </div>
