--- a/src/styles.css
+++ b/src/styles.css
@@ -3,3 +3,15 @@
 .info-background {
   background-color: var(--blue-ecume-950-100);
 }
+
+/* styles that apply to javascript generated element */
+
+#location input.search.fr-input {
+  width: 100%;
+  max-width: 100%;
+  height: 100%;
+}
+
+#location div.fr-input-wrap {
+  left: 0;
+}
