--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -27,15 +27,16 @@
   <app-foret-stepper [step]="step"></app-foret-stepper>
 
   <app-foret-search-form (search)="nextStep()" [class.hidden]="step > 1"></app-foret-search-form>
+  
+  <app-thematic-select [class.hidden]="step > 2"></app-thematic-select>
 
   <div class="fr-grid-row fr-grid-row--gutters">
-
     <div class="fr-col-12 fr-col-lg-6 map-container" [class.fr-col-lg-12]="step === 1" [class.hidden]="step < 1">
       <app-map></app-map>
     </div>
 
     <div class="fr-col-12 fr-col-lg-6">
-      <app-map-info *ngIf="step > 1"></app-map-info>
+      <app-thematic-tabs *ngIf="step > 1"></app-thematic-tabs>
     </div>
 
   </div>
