feat(ThematicComponent): Ajout contenu fixe pour tester la cohérence avec la carte

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -26,22 +26,25 @@
 
   <app-foret-stepper [step]="step"></app-foret-stepper>
 
-  <app-foret-search-form (select)="confirmSelect()" [class.hidden]="step > 1"></app-foret-search-form>
-  
-  <app-thematic-select [class.hidden]="step < 2"></app-thematic-select>
+  <div class="fr-mb-4v">
+    <app-foret-search-form *ngIf="step === 0 || step === 1" (select)="confirmSelect()"></app-foret-search-form>
+  </div>
 
   <div class="fr-grid-row fr-grid-row--gutters">
-    
-    <div class="fr-col-12 fr-col-lg-6 map-container" [class.fr-col-lg-12]="step === 1" [class.hidden]="step < 1">
+    <div class="fr-col-12 fr-col-lg-6">
+      <app-thematic-select *ngIf="step > 1"></app-thematic-select>
+    </div>
+  </div>
+
+  <div class="fr-grid-row fr-grid-row--gutters">
+
+    <div class="fr-col-12 fr-col-lg-6" [class.fr-col-lg-12]="step === 1" [class.map-hidden]="step < 1">
       <app-map></app-map>
     </div>
-
-    
 
     <div class="fr-col-12 fr-col-lg-6">
       <app-thematic-tabs *ngIf="step > 1"></app-thematic-tabs>
     </div>
-
 
   </div>
 
