--- a/src/app/pages/mes-forets/mes-forets.component.html
+++ b/src/app/pages/mes-forets/mes-forets.component.html
@@ -1,33 +1,22 @@
-<div class="fr-container">
+<div class="fr-container fr-mt-6v">
 
-    <h1>Mes Forets</h1>
+  <h1>Mes Forets</h1>
 
-    <div class="fr-grid-row fr-grid-row--gutters fr-mb-1w">
-        @for(foret of foretCards;  track foret.id) {
-            <div class="fr-col-12 fr-col-md-6 fr-col-lg-6 fr-mb-6v">
-                <dsfr-card
-                    [imagePath]="foret.imgUrl"
-                    [tags]="foret.tags"
-                    [heading]="foret.name"
-                    [description]="'<b>' + foret.area + ' ha</b><br>'
-                                + foret.parcels.length + ' parcelles <br>'
-                                + 'Mis à jour le ' + foret.updatedAt
-                                "
-                    [disabled]="false"
-                    [enlargeLink]="false"
-                    [hasFooter]="true"
-                    [horizontal]="true"
-                >
-                    <dsfr-buttons-group footer inline="always">
-                        <dsfr-button label="Voir le détail"></dsfr-button>
-                        <dsfr-button label="?" variant="secondary"></dsfr-button>
-                    </dsfr-buttons-group>
-                </dsfr-card>
-            </div>
-        }
+  <div class="fr-grid-row fr-grid-row--gutters fr-mb-4v">
 
+    @for(foret of foretCards; track foret.id) {
+    <div class="fr-col-12 fr-col-md-6 fr-col-lg-6 fr-mb-6v">
+      <dsfr-card [imagePath]="foret.imagePath" [tags]="foret.tags" [heading]="foret.heading"
+        [description]="foret.description" [enlargeLink]="foret.enlargeLink" [hasFooter]="foret.hasFooter"
+        [horizontal]="foret.horizontal">
+        <dsfr-buttons-group footer inline="always">
+          <dsfr-button label="Voir le détail"></dsfr-button>
+          <dsfr-button label="?" variant="secondary"></dsfr-button>
+        </dsfr-buttons-group>
+      </dsfr-card>
     </div>
+    }
 
-    
+  </div>
 
 </div>
