feat(HomeComponent): suppression texte d'aide apres step 1

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -54,7 +54,7 @@
 
 </div>
 
-<div class="fr-container fr-mt-4v fr-mb-4v fr-pt-8v fr-pb-8v">
+<div *ngIf="step === 0" class="fr-container fr-mt-4v fr-mb-4v fr-pt-8v fr-pb-8v">
 
   <h2>Trouver la réglementation sur votre forêt et préserver la biodiversité</h2>
   <ul>
