--- a/src/app/enquete/components/enquete-stepper/enquete-stepper.component.html
+++ b/src/app/enquete/components/enquete-stepper/enquete-stepper.component.html
@@ -1,4 +1,5 @@
-<h2>Votre forêt</h2>
+<h2 *ngIf="title">Votre forêt - {{ title }}</h2>
+<h2 *ngIf="!title">Votre forêt - nouvelle forêt</h2>
 
 <ng-container *ngIf="currentStepTitle">
   <dsfr-stepper [totalSteps]="4" [currentStep]="currentStep" [currentStepTitle]="currentStepTitle"
