feat(App): Accessilibité - Ajout des SkipLink et de la PrefixTitleStrategy

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="fr-container info-background fr-mt-8v fr-mb-4v fr-pr-16v fr-pl-16v fr-pt-12v fr-pb-12v">
+<div class="fr-container info-background fr-mt-8v fr-mb-8v fr-pr-16v fr-pl-16v fr-pt-12v fr-pb-12v">
 
   <!-- first ligne - logo + title -->
   <div class="fr-grid-row fr-grid-row--gutters">
@@ -22,7 +22,7 @@
 
 </div>
 
-<div class="fr-container fr-mt-4v fr-mb-4v fr-pt-8v fr-pb-8v">
+<div class="fr-container fr-mt-4v fr-mb-4v">
 
   <dsfr-buttons-group inline="always" iconPosition="left">
     <dsfr-button label="Démarrer" icon="fr-icon-arrow-right-fill" iconPosition="left"
@@ -31,7 +31,7 @@
 
 </div>
 
-<div class="fr-container fr-mt-4v fr-mb-4v fr-pt-8v fr-pb-8v">
+<div class="fr-container fr-mt-4v fr-mb-8v">
 
   <h2>Trouver la réglementation sur votre forêt et préserver la biodiversité</h2>
   <ul>
