--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,17 @@
-<header>
+<dsfr-skiplinks [links]="skiplinks" (linkSelect)="skipLinkSelect($event)"></dsfr-skiplinks>
+
+<p id="title-page" tabindex="-1" class="sr-only fr-sr-only">
+  {{ title }}
+</p>
+
+<header id="header-navigation" tabindex="-1">
   <app-header></app-header>
 </header>
 
-<main>
+<main id="content" tabindex="-1">
   <router-outlet></router-outlet>
 </main>
 
-<footer>
+<footer id="footer" tabindex="-1">
   <app-footer></app-footer>
 </footer>
