--- a/src/app/shared-thematic/components/monument-historique/monument-historique.component.html
+++ b/src/app/shared-thematic/components/monument-historique/monument-historique.component.html
@@ -1,11 +1,13 @@
-<h3>Votre forêt se trouve dans la zone des monuments suivants :</h3>
+<h3>Votre forêt se trouve dans la zone des monuments suivants</h3>
 
 <ul>
-    @for(monument of monumentList; track monument){
-        @if(monument[1] != "none"){
-            <li><a href = {{monument[1]}} target="_blank"> {{monument[0]}} </a></li>
-        }@else {
-            <li>{{monument[0]}}</li>
-        }
-    }
+@for(monument of monuments; track monument) {
+  @if(monument.link !== ""){
+    <li>
+      <a [href]="monument.link" target="_blank">{{ monument.name }}</a>
+    </li>
+  } @else {
+    <li>{{ monument.name }}</li>
+  }
+}
 </ul>
