feat(shared-thematic) : autoriser le choix de plusieurs thématiques / feat(enquete-new) : suppression outils de dessin au step 3 & alerte si pas de forêt saisie lors du passage step 2 vers step 3

--- a/src/app/shared-thematic/components/thematic-tabs/thematic-tabs.component.html
+++ b/src/app/shared-thematic/components/thematic-tabs/thematic-tabs.component.html
@@ -1,8 +1,8 @@
-<dsfr-tabs [selectedTabIndex]="selectedTabIndex">
+<dsfr-tabs [selectedTabIndex]="selectedTabIndex" (tabSelect)="selectTab($event)">
 
   @for (tab of tabsConfig; track $index) {
-  <dsfr-tab *ngIf="tab.active" [tabId]="tab.tabId" [label]="tab.label">
-    @switch (tab.tabId) {
+  <dsfr-tab *ngIf="tab.checked" [tabId]="tab.name" [label]="tab.label">
+    @switch (tab.name) {
     @case ('synthese') {
     <app-synthese></app-synthese>
     }
