feature(printer): Modification du html/css pour meilleur rendu pdf

--- a/src/app/requete/pages/requete-new/requete-new.component.html
+++ b/src/app/requete/pages/requete-new/requete-new.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="breadcrumb" class="fr-container">
+<div *ngIf="breadcrumb" class="fr-container screen-view">
   <app-breadcrumb [breadcrumb]="breadcrumb"></app-breadcrumb>
 </div>
 
