fix(#18): enquete -> requete

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -26,7 +26,7 @@
 
   <dsfr-buttons-group inline="always" iconPosition="left">
     <dsfr-button label="Démarrer" icon="fr-icon-arrow-right-fill" iconPosition="left"
-      (click)="newEnquete()"></dsfr-button>
+      (click)="newRequete()"></dsfr-button>
   </dsfr-buttons-group>
 
 </div>
