--- a/src/app/pages/mes-forets/mes-forets.component.html
+++ b/src/app/pages/mes-forets/mes-forets.component.html
@@ -14,7 +14,7 @@
         [description]="foret.description" [enlargeLink]="foret.enlargeLink" [hasFooter]="foret.hasFooter"
         [horizontal]="foret.horizontal">
         <dsfr-buttons-group footer inline="always">
-          <dsfr-button label="Voir le détail" (click)="goToEnquete(foret.heading)"></dsfr-button>
+          <dsfr-button label="Voir le détail" (click)="goToRequete(foret.heading)"></dsfr-button>
           <dsfr-button label="?" variant="secondary"></dsfr-button>
         </dsfr-buttons-group>
       </dsfr-card>
