--- a/src/app/requete/pages/requete-new/requete-new.component.html
+++ b/src/app/requete/pages/requete-new/requete-new.component.html
@@ -6,7 +6,7 @@
 
   <h1>Votre forêt<span *ngIf="forestId"> - {{ forestId }}</span></h1>
 
-  <app-enquete-stepper [step]="step"></app-enquete-stepper>
+  <app-requete-stepper [step]="step"></app-requete-stepper>
 
   <div *ngIf="step === 0 || step === 1" class="fr-grid-row fr-mb-4v">
     <div class="fr-col-12 fr-col-lg-6">
@@ -33,8 +33,8 @@
   </div>
 
   <div class="fr-mt-4v">
-    <app-enquete-stepper-control [step]="step" (previous)="previousStep()"
-      (next)="nextStep()"></app-enquete-stepper-control>
+    <app-requete-stepper-control [step]="step" (previous)="previousStep()"
+      (next)="nextStep()"></app-requete-stepper-control>
   </div>
 
 </div>
