--- a/src/app/requete/pages/requete-new/requete-new.component.html
+++ b/src/app/requete/pages/requete-new/requete-new.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="breadcrumb" class="fr-container screen-view">
+<div *ngIf="breadcrumb" class="fr-container ">
   <app-breadcrumb [breadcrumb]="breadcrumb"></app-breadcrumb>
 </div>
 
@@ -35,6 +35,15 @@
   <div class="fr-mt-4v">
     <app-requete-stepper-control [step]="step" (previous)="previousStep()"
       (next)="nextStep()"></app-requete-stepper-control>
-  </div>
 
+    <!-- Bouton de redirection impression-->
+    <div class="fr-grid-row fr-mt-4v">
+      <div class="fr-col">
+        <button class="fr-btn" (click)="redirectToPrinter()">
+          Imprimer cette requête
+        </button>
+      </div>
+    </div>  
+  </div>
 </div>
+
