--- a/src/app/shared-thematic/components/thematic-tabs/thematic-tabs.component.html
+++ b/src/app/shared-thematic/components/thematic-tabs/thematic-tabs.component.html
@@ -7,7 +7,7 @@
     @if (first) {
     <app-synthese></app-synthese>
     } @else {
-    <app-fiche-info-view [fiche]="ficheTab" [features]="responseFeatures"></app-fiche-info-view>
+    <app-fiche-info-view [fiche]="ficheTab"></app-fiche-info-view>
     }
 
   </dsfr-tab>
