refactor(SharedThematic): revue de code - deplacement de la lecture des reponses WFS dans le service

--- a/src/app/shared-thematic/components/reglementation-view/reglementation-view.component.html
+++ b/src/app/shared-thematic/components/reglementation-view/reglementation-view.component.html
@@ -1,1 +1,8 @@
-<p>reglementation-view works!</p>
+@if (reglementation) {
+<p>
+  Votre forêt est présente sur une zone de {{ reglementation }}.
+  En cas de coupe veuillez <i>recommandation à construire</i>
+</p>
+} @else {
+<p>Aucune reglementation ou recommandation.</p>
+}
