--- a/src/app/shared-thematic/components/layer-info-view/layer-info-view.component.html
+++ b/src/app/shared-thematic/components/layer-info-view/layer-info-view.component.html
@@ -1,21 +1,20 @@
-
 @if (layer && layer.features && layer.features.length > 0) {
 
-<p>{{ layer.title }}</p>
+<h4 class="fr-h6">{{ layer.title }}</h4>
 <ul>
   @for (feature of layer.features; track feature) {
 
-  @if (layer.link !== "") {
   <li>
+    @if (layer.link !== "") {
     <a [href]="feature.link" target="_blank">{{ feature.name }}</a>
+    } @else {
+    {{ feature.name }}
+    }
   </li>
-  } @else {
-  <li>{{ feature.name }}</li>
-  }
 
   }
 </ul>
 
-<app-reglementation-view></app-reglementation-view>
+<app-reglementation-view [reglementation]="layer.title"></app-reglementation-view>
 
 }
