feat(App): suppression texte obsolete

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -35,14 +35,15 @@
 
   <h2>Trouver la réglementation sur votre forêt et préserver la biodiversité</h2>
   <ul>
-    <li>Nos activités en forêt on un impact sur l’environnement. Des règlementations ont été édictées pour
-      préserver les enjeux liés à cet impact.</li>
-    <li>La valorisation de données spatiales permettrait de mieux identifier quelle règlementation s’applique où.
-      Cela nécessiterait de disposer de couches de données de référence et de pouvoir les interroger.</li>
-    <li>Nos activités en forêt on un impact sur l’environnement. Des règlementations ont été édictées pour
-      préserver les enjeux liés à cet impact.</li>
-    <li>La valorisation de données spatiales permettrait de mieux identifier quelle règlementation s’applique où.
-      Cela nécessiterait de disposer de couches de données de référence et de pouvoir les interroger.</li>
+    <li>
+      Nos activités en forêt on un impact sur l’environnement.
+      Des règlementations ont été édictées pour
+      préserver les enjeux liés à cet impact.
+    </li>
+    <li>
+      La valorisation de données spatiales permettrait de mieux identifier quelle règlementation s’applique.
+      Cela nécessiterait de disposer de couches de données de référence et de pouvoir les interroger.
+    </li>
   </ul>
 
 </div>
