--- a/src/app/shared-thematic/components/reglementation-view/reglementation-view.component.html
+++ b/src/app/shared-thematic/components/reglementation-view/reglementation-view.component.html
@@ -1,7 +1,7 @@
 @if (reglementation) {
 <p>
   Votre forêt est présente sur une zone de {{ reglementation }}.
-  En cas de coupe veuillez <i>recommandation à construire</i>
+  En cas de coupe veuillez suivre la recommandation suivante <i>TODO à construire</i>
 </p>
 } @else {
 <p>Aucune reglementation ou recommandation.</p>
