--- a/src/app/shared-thematic/components/synthese/synthese.component.html
+++ b/src/app/shared-thematic/components/synthese/synthese.component.html
@@ -1,35 +1,8 @@
-<h3 class="fr-h6">Recommandations de gestion</h3>
+<h3 class="fr-h6">Conseils pour instruire vos travaux</h3>
 
 <ul>
   <li>
-    Favoriser les essences feuillues à tronc rugueux et maintenir en essence d’accompagnement les bois tendres type
-    tremble ou bouleau. Dans les zones où les gros arbres sont rares, ces essences s’altérant rapidement pourront
-    servir de relais comme sites de nidification.
-  </li>
-  <li>
-    Le régime du taillis sous futaie ou d'autres types irréguliers sont les plus favorables à l’espèce à condition
-    de maintenir en permanence au moins 20 gros arbres à l’hectare.
-  </li>
-  <li>
-    En cas de futaie régulière, augmenter les âges d’exploitation à plus de 200 ans afin d’augmenter la surface en
-    vieux peuplement et donc en gros bois.
-  </li>
-  <li>
-    <b>Îlots de sénescence ou vieillissement</b> : à installer sur des zones riches en gros bois, l’idéal étant
-    d’atteindre 40 gros bois/ha. Attention, pour les îlots de vieillissement, à s’assurer que d’autres peuplements à
-    proximité soient favorables à l’espèce avant d’exploiter.
-  </li>
-  <li>
-    <b>Arbres-habitats</b> : conserver des bois feuillus de plus de 50 cm de diamètre, si possible présentant des
-    signes de pourriture/champignons dans le tiers supérieur du tronc ou sur les charpentières.
+    Si votre chantier nécessite de contacter divers établissements
+    un ordre sera à respecter pour éviter les allers-retours.
   </li>
 </ul>
-
-<h3 class="fr-h6">Planning d’exploitation</h3>
-
-<ul>
-  <li>Ne pas éliminer de façon systématique les arbres portant des polypores.</li>
-  <li>Pas d’intervention pendant la période de nidification.</li>
-</ul>
-
-<p>TODO! app-gestion-calendar</p>
