--- a/src/app/shared-thematic/components/fiche-info-view/fiche-info-view.component.html
+++ b/src/app/shared-thematic/components/fiche-info-view/fiche-info-view.component.html
@@ -4,7 +4,7 @@
 
 @for (layer of fiche.layers; track layer) {
 
-  <app-layer-info-view [layer]="layer"></app-layer-info-view>
+  <app-layer-info-view [layer]="layer" [flatview]="flatview"></app-layer-info-view>
 
 }
 
