fix: flatview porter par le model

--- a/src/app/shared-thematic/components/layer-info-view/layer-info-view.component.html
+++ b/src/app/shared-thematic/components/layer-info-view/layer-info-view.component.html
@@ -1,16 +1,15 @@
 @if (layer && layer.features && layer.features.length > 0) {
 
 <h4 class="fr-h6">{{ layer.title }}</h4>
+@if (layer.flatview){
+  <div [id]="map" class="map"></div> <!--Id générer par service map -> generateCloneId() -->
+  <p>TESING</p>
+  <!-- <app-map-viewer></app-map-viewer> -->
+}
 <ul>
   @for (feature of layer.features; track feature) {
-
   <li>
     @if (layer.link !== "") {
-      @if (flatview == true){
-        <div id="map-container-{{ feature.id }}" ></div> <!--Id générer par service map -> generateCloneId() -->
-        <p>TESING</p>
-        <!-- <app-map-viewer></app-map-viewer> -->
-      }
       <a [href]="feature.link" target="_blank">{{ feature.name }}</a>
     } @else {
     {{ feature.name }}
