feat(MapViewerComponent): creation ou chargement d'une nouvelle carte pilote par boolean

--- a/src/app/requete/pages/requete-printer/requete-printer.component.html
+++ b/src/app/requete/pages/requete-printer/requete-printer.component.html
@@ -1,1 +1,7 @@
-<app-thematic-list></app-thematic-list>
+<div class="fr-container">
+
+  <h1>Votre forêt - Impression</h1>
+
+  <app-thematic-list></app-thematic-list>
+
+</div>
