--- a/src/app/shared-thematic/components/layer-info-view/layer-info-view.component.html
+++ b/src/app/shared-thematic/components/layer-info-view/layer-info-view.component.html
@@ -1,14 +1,16 @@
 @if (layer && layer.features && layer.features.length > 0) {
 
 <h4 class="fr-h6">{{ layer.title }}</h4>
-@if (layer.flatview){
-  <div [id]="map" class="map"></div> 
+
+@if (displaySituationMap) {
+  <app-map-viewer [id]="map" [situationMap]="displaySituationMap"></app-map-viewer>
 }
+
 <ul>
   @for (feature of layer.features; track feature) {
   <li>
     @if (layer.link !== "") {
-      <a [href]="feature.link" target="_blank">{{ feature.name }}</a>
+    <a [href]="feature.link" target="_blank">{{ feature.name }}</a>
     } @else {
     {{ feature.name }}
     }
