--- a/src/app/requete/components/requete-stepper-control/requete-stepper-control.component.html
+++ b/src/app/requete/components/requete-stepper-control/requete-stepper-control.component.html
@@ -1,4 +1,17 @@
 <dsfr-buttons-group inline="always" iconPosition="left" class="step-btn">
-  <dsfr-button label="Modifier" variant="secondary" icon="fr-icon-arrow-left-fill" (click)="emitPrevious()" [disabled]="step < 1"></dsfr-button>
-  <dsfr-button label="Valider" icon="fr-icon-arrow-right-fill" (click)="emitNext()" [disabled]="step > 2"></dsfr-button>
+
+  <ng-container *ngIf="step !== 0">
+    <dsfr-button [label]="previousButtonLabel" variant="secondary" icon="fr-icon-arrow-left-fill"
+      (click)="emitPrevious()" [disabled]="step < 1"></dsfr-button>
+  </ng-container>
+
+  <ng-container *ngIf="step === 2">
+    <dsfr-button label="Enregistrer Ma Forêt" (click)="save()"></dsfr-button>
+  </ng-container>
+
+  <ng-container *ngIf="step !== 3">
+    <dsfr-button [label]="nextButtonLabel" icon="fr-icon-arrow-right-fill" (click)="emitNext()"
+      [disabled]="step > 2"></dsfr-button>
+  </ng-container>
+
 </dsfr-buttons-group>
