feat(App): intercept request behind Auth and play refreshToken if necessary

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,6 +12,6 @@
   <router-outlet></router-outlet>
 </main>
 
-<footer id="footer" tabindex="-1">
+<footer id="footer" tabindex="-1" class="fr-mt-16v">
   <app-footer></app-footer>
 </footer>
